RESOLVED FIXED310995
Fix SMIL repeat(n) event conditions not triggering
https://bugs.webkit.org/show_bug.cgi?id=310995
Summary Fix SMIL repeat(n) event conditions not triggering
Ahmad Saleem
Reported 2026-03-28 13:05:32 PDT
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-28 13:05:39 PDT
Ahmad Saleem
Comment 2 2026-03-28 13:07:54 PDT
EWS
Comment 3 2026-04-30 01:48:51 PDT
Committed 312346@main (d38bdc09bdb7): <https://commits.webkit.org/312346@main> Reviewed commits have been landed. Closing PR #61589 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.